--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     <section id="main">
       <a href="#"><img class="logo" src="img/palatte-black.png"/></a>
 
-      <div class="copy">
+      <div class="content">
         <h1>palatte</h1>
         <h2>palatte is a <font color="#FB6058">simple</font>, <font color="F5AB35">curated</font> list<br />
         of <font color="#0096FF">awesome</font>, <font color="#2ECC41">handpicked</font> colors<br />
         for your project.</h2><br /><br />
-        made by <a href="https://twitter.com/ambonium" target="_blank">@ambonium</a>
+        <p>made by <a href="https://twitter.com/ambonium" target="_blank">@ambonium</a></p>
       </div>
     </section>
 
