--- a/index.html
+++ b/index.html
@@ -51,10 +51,29 @@
           <font color="#FB6058">simple</font>,
           <font color="F5AB35">curated</font> list<br /> of
           <font color="#0096FF">awesome</font>,
-          <font color="#2ECC41">handpicked</font> colors<br /> for your project.</h2><br /><br />
+          <font color="#2ECC41">handpicked</font> colors<br /> for your project.</h2><br />
+          <p>made by <a href="https://twitter.com/ambonium" target="_blank">@ambonium</a> & <a href="https://twitter.com/ryanlmarten" target="_blank">@ryanlmarten</a></p>
       </div>
     </div>
-    
+    <!--
+    <div class="row">
+      <div class="col-xs-4">
+        <div class="color-box">
+          #47B8E0
+        </div>
+      </div>
+      <div class="col-xs-4">
+         <div class="color-box">
+           #FF7473
+        </div>
+      </div>
+      <div class="col-xs-4">
+         <div class="color-box">
+          #FFC952
+        </div>
+      </div>
+    </div>
+    -->
   </div>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script>
