Change from using thumbnail hack to JS responsive

--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  --> <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  
+  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
   <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+  <script src="scripts.js"></script>
 </head>
 
 <body>
   <div class="container" id="main">
     <div class="row">
       <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-4 col-lg-2 col-lg-offset-5">
-      <a href="#"><img class="img-responsive" id="logo" src="img/palatte-black.png" /></a>
+        <a href="#"><img class="img-responsive" id="logo" src="img/palatte-black.png" /></a>
       </div>
     </div>
-  
     <div class="row content">
       <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
         <h1 class="title">palatte</h1>
@@ -51,39 +51,65 @@
           <font color="#FB6058">simple</font>,
           <font color="F5AB35">curated</font> list<br /> of
           <font color="#0096FF">awesome</font>,
-          <font color="#2ECC41">handpicked</font> colors<br /> for your project.</h2><br />
-          <p>made by <a href="https://twitter.com/ambonium" target="_blank">@ambonium</a> & <a href="https://twitter.com/ryanlmarten" target="_blank">@ryanlmarten</a></p>
-      </div>
+          <font color="#2ECC41">handpicked</font> colors<br /> for your project.</h2><br /></div>
     </div>
-    <!--
+    <br />
     <div class="row">
-      <div class="col-xs-4">
-        <div class="color-box">
-          #47B8E0
-        </div>
-      </div>
-      <div class="col-xs-4">
-         <div class="color-box">
-           #FF7473
-        </div>
-      </div>
-      <div class="col-xs-4">
-         <div class="color-box">
-          #FFC952
+      <div class="col-xs-6 col-xs-offset-3 col-md-6 col-md-offset-3">
+        <div class="row">
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#FB6058</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#FFC952</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#47BBE0</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#34314C</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#2499ED</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#602FD0</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#0080FF</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#27AE60</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#E74C3C</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#4DAF7C</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#2499ED</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#26C261</div>
+          </div>
         </div>
       </div>
     </div>
-    -->
+    <br />
+    <div class="row content">
+      <p>made by <a href="https://twitter.com/ambonium" target="_blank">@ambonium</a> & <a href="https://twitter.com/ryanlmarten" target="_blank">@ryanlmarten</a></p>
+    </div>
   </div>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.13/clipboard.min.js"></script>
   <script>
     (function(i, s, o, g, r, a, m) {
       i['GoogleAnalyticsObject'] = r;
       i[r] = i[r] || function() {
         (i[r].q = i[r].q || []).push(arguments)
       }, i[r].l = 1 * new Date();
-      a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0];
+      a = s.createElement(o), m = s.getElementsByTagName(o)[0];
       a.async = 1;
       a.src = g;
       m.parentNode.insertBefore(a, m)
