--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
   <link rel="shortcut icon" href="favicon.png" type="image/png">
   <link href='https://fonts.googleapis.com/css?family=Product+Sans:400,400i,700,700i' rel='stylesheet' type='text/css'>
   <meta name="description" content="palatte is a simple, curated list of awesome, handpicked colors for your project." />
-  <meta name="keywords" content="palatte, color, flat, ui, ux, project">
+  <meta name="keywords" content="palatte, color, flat colors, colors, curated, list, handpicked, awesome, simple, ohmega, palette, flat, ui, ux, project">
   <meta property="og:site_name" content="palatte" />
   <meta property="og:title" content="palatte" />
   <meta property="og:type" content="landing" />
-  <meta property="og:image" content="https://ohmega.org/assets/images/card.jpg" />
+  <meta property="og:image" content="https://pallate.ml/card.png" />
   <meta property="og:description" content="palatte is a simple, curated list of awesome, handpicked colors for your project." />
   <meta property="og:url" content="https://palatte.ml" />
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:title" content="palatte" />
   <meta property="twitter:description" content="" />
-  <meta property="twitter:image" content="https://ohmega.org/assets/images/card.jpg" />
+  <meta property="twitter:image" content="https://palatte.ml/card.png" />
   <meta property="twitter:url" content="https://palatte.ml" />
   <meta property="twitter:site" content="@thepalatte" />
-  <meta property="twitter:creator" content="@ambonium" />
+  <meta property="twitter:creator" content="@ambonium, @ryanlmarten" />
   <link rel="canonical" href="https://palatte.ml">
 
   <!-- Bootstrap -->
@@ -33,16 +33,18 @@
 
   <!-- jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  
+
   <!-- Toastr -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
 
 
   <script src="scripts.js"></script>
+  <script src="//fast.eager.io/iqQXAVC6vK.js"></script>
 </head>
 
 <body>
+  <a href="https://github.com/palatte/palatte.github.io" class="github-corner" aria-label="View source on Github"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#FD6C6C; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
   <div class="container" id="main">
     <div class="row">
       <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-4 col-lg-2 col-lg-offset-5">
@@ -56,54 +58,137 @@
           <font color="#FB6058">simple</font>,
           <font color="F5AB35">curated</font> list<br /> of
           <font color="#0096FF">awesome</font>,
-          <font color="#2ECC41">handpicked</font> colors<br /> for your project.</h2><br /></div>
+          <font color="#2ECC41">handpicked</font> colors<br /> for your project.</h2><br />
+      </div>
     </div>
     <br />
     <div class="row">
       <div class="col-xs-6 col-xs-offset-3 col-md-6 col-md-offset-3">
         <div class="row">
           <div class="col-xs-12 col-md-6 col-lg-4">
-            <div class="color-box">#FB6058</div>
+            <div class="color-box">#FF7473</div>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="color-box">#FFC952</div>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4">
-            <div class="color-box">#47BBE0</div>
-          </div>
-          <div class="col-xs-12 col-md-6 col-lg-4">
-            <div class="color-box">#34314C</div>
-          </div>
-          <div class="col-xs-12 col-md-6 col-lg-4">
-            <div class="color-box">#2499ED</div>
-          </div>
-          <div class="col-xs-12 col-md-6 col-lg-4">
-            <div class="color-box">#602FD0</div>
-          </div>
-          <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="color-box">#0080FF</div>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4">
-            <div class="color-box">#27AE60</div>
+            <div class="color-box">#47BBE0</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#26C261</div>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="color-box">#E74C3C</div>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4">
-            <div class="color-box">#4DAF7C</div>
-          </div>
-          <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="color-box">#2499ED</div>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4">
-            <div class="color-box">#26C261</div>
+            <div class="color-box">#7512FB</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#1260FC</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#2ECC41</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#2F1849</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#DE5264</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#47099F</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#3498DB</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#5E70C9</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#FFA000</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#FB6058</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#602FD0</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#1ABC9C</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#3D3D3D</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#4754C2</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#F9BF3B</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#E74C3C</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#097EDF</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#F19495</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#6D3CE0</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#E67E22</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#ED3555</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#3585D4</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#3BB089</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#2B95FD</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#DF646B</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#5445F6</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#5F3F82</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#E9722A</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#38297A</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#56639F</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#1479EA</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#9B59B6</div>
           </div>
         </div>
       </div>
     </div>
     <br /><br />
     <div class="row content">
-      <p>made by <a href="https://twitter.com/ambonium" target="_blank">@ambonium</a> & <a href="https://twitter.com/ryanlmarten" target="_blank">@ryanlmarten</a></p>
+      <p>suggest colors for <a href="https://twitter.com/thepalatte" target="_blank">@thepalatte</a></p>
+      <p>made by <a href="https://twitter.com/ambonium" target="_blank">@ambonium</a> & <a href="https://twitter.com/ryanlmarten" target="_blank">@ryanlmarten</a></p><br />
     </div>
   </div>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
@@ -119,7 +204,7 @@
       a.src = g;
       m.parentNode.insertBefore(a, m)
     })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-    ga('create', 'UA-43818380-2', 'auto');
+    ga('create', 'UA-88441625-1', 'auto');
     ga('send', 'pageview');
   </script>
 </body>
