--- a/index.html
+++ b/index.html
@@ -66,7 +66,34 @@
       <div class="col-xs-6 col-xs-offset-3 col-md-6 col-md-offset-3">
         <div class="row">
           <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#623EBB</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#FCB941</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#FC6042</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#27AE60</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#446CB3</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#E68364</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#22A7F0</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#03A678</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="color-box">#FF7473</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#F39C12</div>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="color-box">#FFC952</div>
@@ -81,7 +108,7 @@
             <div class="color-box">#26C261</div>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4">
-            <div class="color-box">#E74C3C</div>
+            <div class="color-box">#EF4836</div>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="color-box">#2499ED</div>
