--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@
             <div class="color-box">#597DF7</div>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#F64747</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#53D769</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#F47983</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="color-box">#23B684</div>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4">
