--- a/index.html
+++ b/index.html
@@ -66,6 +66,18 @@
       <div class="col-xs-6 col-xs-offset-3 col-md-6 col-md-offset-3">
         <div class="row">
           <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#0099FF</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#FE8C19</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#FAA945</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#F76E64</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="color-box">#597DF7</div>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4">
@@ -175,6 +187,9 @@
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="color-box">#F9BF3B</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#4387F5</div>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="color-box">#E74C3C</div>
