--- a/index.html
+++ b/index.html
@@ -66,6 +66,33 @@
       <div class="col-xs-6 col-xs-offset-3 col-md-6 col-md-offset-3">
         <div class="row">
           <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#FD746C</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#3A7BD5</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#57C791</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#8281D5</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#406FBF</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#C14450</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#797ED2</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#47C268</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#4B75C3</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="color-box">#0099FF</div>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4">
