--- a/index.html
+++ b/index.html
@@ -75,19 +75,13 @@
             <div class="color-box">#57C791</div>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4">
-            <div class="color-box">#406FBF</div>
-          </div>
-          <div class="col-xs-12 col-md-6 col-lg-4">
-            <div class="color-box">#8281D5</div>
-          </div>
-          <div class="col-xs-12 col-md-6 col-lg-4">
-            <div class="color-box">#47C268</div>
-          </div>
-          <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="color-box">#4B75C3</div>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="color-box">#797ED2</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#583DB8</div>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="color-box">#0099FF</div>
@@ -100,6 +94,15 @@
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="color-box">#F76E64</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#406FBF</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#8281D5</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#47C268</div>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="color-box">#597DF7</div>
