--- a/index.html
+++ b/index.html
@@ -66,6 +66,36 @@
       <div class="col-xs-6 col-xs-offset-3 col-md-6 col-md-offset-3">
         <div class="row">
           <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#4975FB</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#924DE6</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#EF5252</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#F59500</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#F4998A</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#FE8A71</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#4F59D0</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#E3584C</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#A7C1EE</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="color-box">#FF7F50</div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="color-box">#FD746C</div>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4">
